# py_cpp_pair

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: releaseyml
docs/: api.md  architecture.md  examples.md  installation.md  package_manager.md  troubleshooting.md
examples/: basic.py  class_example.py  fmt_example.py  opencv_example.py  raylib_example.py
py_cpp/: __init__.py  api.py  cache.py  cleanup.py  compiler.py  config.py  dependency_manager.py  errors.py  installer.py  loader.py  logging_utils.py  metadata.py  parser.py  platform_utils.py  runtime.py  toolchain.py  utils.py  wrapper_generator.py
py_cpp/data/: __init__.py  packages.json
py_cpp/data/builds/: README.md
py_cpp/data/cache/: README.md
py_cpp/data/logs/: README.md
py_cpp/templates/: __init__.py  module_template.cpp  wrapper_template.cpp
tests/: __init__.py  test_basic.py  test_cache.py  test_classes.py  test_installer.py  test_runtime.py  test_toolchain.py
